2007-08-15  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.c (do_execute_module):
	fixed possible crash when fork fails

2007-08-08  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/events.c (My_XNextEvent):
	fixed hang with startup modules

2007-08-07  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/conditional.c (FreeConditionMask):
	fixed crash with inverted name condition

	* NEWS:
	fixed typo

2007-08-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.ac:
	* README:
	* NEWS:
	* INSTALL.fvwm:
	* sample.fvwmrc/system.fvwm2rc-sample-95:
	* sample.fvwmrc/system.fvwm2rc:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	* libs/Picture.c (PicturePrintImageCache):
	* libs/Module.c:
	* libs/FGettext.c (FGettextPrintLocalePath):
	* libs/fvwmsignal.c:
	* libs/Module.h:
	* libs/PictureUtils.c (PictureAllocColorTable)
	(PicturePrintColorInfo):
	* libs/FScreen.h:
	* libs/fvwmsignal.h:
	* libs/Bindings.c:
	* libs/FScreen.c:
	* libs/Ficonv.c (convert_charsets):
	(FiconvSetupConversion):
	* fvwm/decorations.c:
	* fvwm/gnome.h:
	* fvwm/events.c:
	* fvwm/add_window.c (setup_window_font):
	(setup_icon_font):
	* fvwm/fvwm.1.in:
	* fvwm/session.h:
	* fvwm/conditional.c:
	* fvwm/fvwm.c (SetRCDefaults):
	(main):
	* fvwm/ewmh_events.c:
	* fvwm/stack.c:
	* fvwm/gnome.c:
	* fvwm/menustyle.c (menustyle_parse_style):
	(menustyle_copy):
	* fvwm/ewmh.c (EWMH_Init):
	* libs/Flocale.c (FlocaleParseShadow):
	(FlocaleGetFontSet):
	(FlocaleLoadFont):
	(FlocalePrintLocaleInfo):
	* fvwm/misc.c (fvwm_msg):
	* vms/README:
	* vms/vms.c:
	write fvwm in lower case

	* configure.ac:
	fixed build without GNU make

2007-08-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/Flocale.c (FlocaleChar2bOneCharToUtf8):
	fixed buffer overflow

2007-08-06  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/module_list.h (fmodule_list_itr):
	* fvwm/module_list.c (module_list_itr_init, module_list_itr_next):
	replace iterator struct by typedef
