@@ -3,6 +3,14 @@
 	* fvwm/module_list.c (do_execute_module):
 	fixed possible crash when fork fails
 
+	* fvwm/module_list.c (module_list_remove):
+	now returns the removed fmodule*, or NULL if unsuccessful
+	removed error message when removing a not listed module (it's normal)
+
+	* fvwm/module_list.c (module_kill):
+	module is inserted in death_row only if it is successfuly removed from
+	module_list (fixes crash when module is killed more than once)
+
 2007-08-08  Renato Caldas  <seventhguardian@gmail.com>
 
 	* fvwm/events.c (My_XNextEvent):
